Fixed resume overflow

--- a/client/less/resume.less
+++ b/client/less/resume.less
@@ -1112,6 +1112,10 @@ a.hire-btn:hover{
     background-color: #f0f2f7;
 }
 
+#resume.section .container {
+    display: inline-table;
+}
+
 /* 8.1 - Timeline
 ------------------------------------------------------------------------*/
 .timeline {
